2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/__gettod.c: Rework autoconf defines.
	Eliminate RTEMS_UNIX.
	* libcsupport/src/_calloc_r.c, libcsupport/src/_realloc_r.c:
	Rework autoconf defines.
	* libcsupport/src/open.c, libcsupport/src/close.c:
	Rework autoconf defines.
	* libcsupport/src/tcflow.c: Remove unused includes.
	* libcsupport/src/__sbrk.c: Eliminate RTEMS_UNIX.
	* libcsupport/src/_free_r.c, libcsupport/src/_malloc_r.c:
	Rework autoconf defines.
	* libcsupport/src/malloc_boundary.c: Comment out checkMallocArena
	(unused).
	* libcsupport/src/__assert.c: Rework autoconf defines.
	* libcsupport/src/__brk.c: Eliminate RTEMS_UNIX.
	Remove unused includes.
	* libcsupport/src/getgroups.c: Remove unused includes.
	* libcsupport/src/setpgid.c: Remove unused includes.
	* libcsupport/src/malloc_p.h: Remove #include <inttypes.h>.

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/net/ppp_tty.c: Reflect termios_baud_to_number having
	been renamed to rtems_termios_baud_to_number.

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/termios_setinitialbaud.c: 
	Include rtems/termiostypes.h.
	Rename termios_set_initial_baud into rtems_termios_set_initial_baud.
	* libcsupport/src/termios_num2baud.c: 
	Include rtems/termiostypes.h.
	Rename termios_number_to_baud into rtems_number_to_baud.
	* libcsupport/src/termios_baud2num.c: 
	Include rtems/termiostypes.h.
	Rename termios_baud_to_number into rtems_termios_baud_to_number.
	* libcsupport/src/termios_baud2index.c: 
	Include rtems/termiostypes.h.
	Rename termios_baud_to_index into rtems_termios_baud_to_index.
	* libcsupport/include/rtems/termiostypes.h: Include stdlib.h.
	Add rtems_termios_baud_t.
	Rename termios_number_to_baud into rtems_termios_number_to_baud,
	termios_baud_to_number into rtems_termios_baud_to_number,
	termios_baud_to_index into rtems_termios_baud_to_index.

2009-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>
