@@ -1,5 +1,7 @@
 2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* libcsupport/src/_rename_r.c: Rework autoconf defines.
+	Remove unused includes.
 	* libcsupport/src/__gettod.c: Rework autoconf defines.
 	Eliminate RTEMS_UNIX.
 	* libcsupport/src/_calloc_r.c, libcsupport/src/_realloc_r.c:
